Try adding glBindFramebuffer flush workaround to ANGLE as remedy for flaky WebGL tests https://bugs.webkit.org/show_bug.cgi?id=206625

Patch by Kenneth Russell <kbr@chromium.org> on 2020-02-07
Reviewed by Dean Jackson.

* include/platform/FeaturesGL.h:
* src/libANGLE/renderer/gl/StateManagerGL.cpp:
(rx::StateManagerGL::bindFramebuffer):
* src/libANGLE/renderer/gl/renderergl_utils.cpp:
(rx::nativegl_gl::InitializeFeatures):

Canonical link: https://commits.webkit.org/220415@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@256076 268f45cc-cd09-0410-ab3c-d52691b4dbfc